    occur after setting an attribute.
 -- TELNET sub-option data was never saved in buffer.
 -- Fix recent typo in MERGE().
 -- On Win32, add more checking around use of GetPerformanceCounter().
 -- Fix 'round(-0.5,0)' --> '-0' to be '0' instead.
 -- Disallow the train command from being used on itself.
 -- Add protection to @chownall that victim be a player object.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Re-worked update_quotas() so that mudstate.now could be removed.
 -- Use nanosleep() or usleep() on Unix if available.
 -- Pulled alloc/free pairs outside an inner loop in switch() and
    fold().
 -- Improve performance by avoiding write-through caching of A_MONEY in
    the player cache. This was probably the primary reason for needing
    one cached hash page per player. Paging is probably secondary to
    this one.
 -- Changed dbconvert-mode so that it creates 8 temporary files when
    loading a flatfile instead of 4.
 -- Changed attribute cache so that it retains knowledge that an
    attribute value does not exist in the database.
 -- Maintain hash page cache as a double-linked list ordered by recent
    use. Previously, finding the oldest entry required looking at a
    counter in every entry. This improved AllocateEmptyPage()
    performance.
 -- No longer call fsync() when in dbconvert mode.
 -- Mapping page offsets to cache entries has been re-done.  There is
    now a corresponding 'directory' containing all the indices of the
    cache entries.  This is maintained similarly to the directory of
    offsets (which is written to netmux.dir).  To maintain this linkage
    properly, it is necessarily to update ranges of entries which
    correspond to the hash page in the cache.  Previously, the lookup
    was accomplished by looking at recent queries, and if that failed to
    give the answer, it looked at all the cache entries to find a match.
    This improved ReadCache() performance as the corresponding cache