@@ -1,6 +1,6 @@
 // functions.cpp -- MUX function handlers.
 //
-// $Id: functions.cpp,v 1.167 2006/02/14 19:50:24 sdennis Exp $
+// $Id: functions.cpp,v 1.168 2006/05/22 14:38:51 sdennis Exp $
 //
 // MUX 2.4
 // Copyright (C) 1998 through 2005 Solid Vertical Domains, Ltd. All
@@ -3714,27 +3714,34 @@ static FUNCTION(fun_haspower)
 #ifdef REALITY_LVLS
 static FUNCTION(fun_hasrxlevel)
 {
-    dbref player;
     dbref it;
     RLEVEL rl;
 
-    it = match_thing(player, fargs[0]);
-    if (!Good_obj(it)) {
+    it = match_thing(executor, fargs[0]);
+    if (!Good_obj(it))
+    {
         safe_str("#-1 NOT FOUND", buff, bufc);
         return;
     }
     rl = find_rlevel(fargs[1]);
-    if (!rl) {
+    if (!rl)
+    {
         safe_str("#-1 INVALID RLEVEL", buff, bufc);
         return;
     }
-    if (Examinable(player, it)) {
-        if ((RxLevel(it) & rl) == rl) {
+    if (Examinable(executor, it))
+    {
+        if ((RxLevel(it) & rl) == rl)
+        {
             safe_chr('1', buff, bufc);
-        } else {
+        }
+        else
+        {
             safe_chr('0', buff, bufc);
         }
-   } else {
+   }
+   else
+   {
         safe_str("#-1 PERMISSION DENIED", buff, bufc);
    }
 }
@@ -3745,22 +3752,30 @@ static FUNCTION(fun_hastxlevel)
     RLEVEL rl;
 
     it = match_thing(executor, fargs[0]);
-    if (!Good_obj(it)) {
+    if (!Good_obj(it))
+    {
         safe_str("#-1 NOT FOUND", buff, bufc);
         return;
     }
     rl = find_rlevel(fargs[1]);
-    if (!rl) {
+    if (!rl)
+    {
         safe_str("#-1 INVALID RLEVEL", buff, bufc);
         return;
     }
-    if (Examinable(executor, it)) {
-        if ((TxLevel(it) & rl) == rl) {
+    if (Examinable(executor, it))
+    {
+        if ((TxLevel(it) & rl) == rl)
+        {
             safe_chr('1', buff, bufc);
-        } else {
+        }
+        else
+        {
              safe_chr('0', buff, bufc);
         }
-   } else {
+   }
+   else
+   {
         safe_str("#-1 PERMISSION DENIED", buff, bufc);
    }
 }
